# cp4-Y86-64-emulator

./: .gitignore  CMakeLists.txt  README  main.cpp
assembler/: prog.asm
docs/: design.md
headers/: Asm.hpp  Pipe.hpp  Seq.hpp  def.hpp  utilities.hpp
src/: Asm.cpp  AsmTest.cpp  Pipe.cpp  Seq.cpp  SeqTest.cpp  main.cpp  pipeTest.cpp  test1.cpp  utilities.cpp
src/test/: test.cpp  test1.cpp  test2.cpp
tmp/: test.cpp
